--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,6 +1,6 @@
-<header class="bg-zinc-900 flex flex-col md:flex-row p-20 gap-3 text-center md:text-left rounded-xl">
+<header class="bg-zinc-900 flex flex-col md:flex-row md:p-20 gap-3 text-center md:text-left rounded-xl">
     <div>
-        <h1 class="text-5xl font-bold pb-2">Protect your password</h1>
+        <h1 class="text-3xl font-bold pb-2">Protect your password</h1>
         
         <p class="my-4 text-2xl">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, placeat!</p>
         
