--- a/src/components/landing/More.astro
+++ b/src/components/landing/More.astro
@@ -19,7 +19,7 @@
     </div>
 
     <div class="flex flex-1 flex-col gap-y-5 text-center">
-        <h2 class="text-5xl font-bold">Lorem ipsum dolor sit.</h2>
-        <p class="text-3xl text-zinc-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, minus?</p>
+        <h2 class="text-3xl font-bold px-3">Lorem ipsum dolor sit.</h2>
+        <p class="text-3xl text-zinc-400 p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, minus?</p>
     </div>
 </section>
